FIX: Shifted to new UI/UX

--- a/app/components/background.css
+++ b/app/components/background.css
@@ -59,6 +59,15 @@ body {
   z-index: 2;
 }
 
+.AGLogo {
+  position: absolute;
+  width: 200px;
+  height: auto;
+  top: 30px;
+  right: 30px;
+  z-index: 100;
+}
+
 /* White halftone dot matrices positioning and blend styling */
 .righttop-white-overlay {
   position: absolute;
